# config-file-format-evaluation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
config/: config-schema.json  config.json  config.toml  config.xml  config.xsd  config.yaml  invalid_config.json  invalid_config.toml  invalid_config.xml  invalid_config.yaml
src/: config.hpp  json_parser.cpp  json_schema.hpp.in  main.cpp  parser.cpp  parser.hpp  toml_parser.cpp  xml_parser.cpp  xml_schema.hpp.in  yaml_parser.cpp
